tests/data/specs/invalid/incorrect_null_field.rflx
package P is
   type M is
      message
         null;
         F1 : Opaque
            with Size => 8;
      end message;
end P;
